crates/activate/src/snapshots/activate__test__shard_splits.snap
---
source: crates/activate/src/lib.rs
expression: "json!([\"key_splits\", (&key_lhs, &key_rhs), \"clock_splits\",\n(&clock_lhs, &clock_rhs), \"key_changes\", key_changes, \"clock_changes\",\nclock_changes,])"
---
[
  "key_splits",
  [
    {
      "id": "derivation/example/derivation/2020202020202020/10000000-60000000",
      "labels": {
        "labels": [
          {
            "name": "estuary.dev/key-begin",
            "value": "10000000"
          },
          {
            "name": "estuary.dev/key-end",
            "value": "1fffffff"
          },
          {
            "name": "estuary.dev/rclock-begin",
            "value": "60000000"
          },
          {
            "name": "estuary.dev/rclock-end",
            "value": "9fffffff"
          },
          {
            "name": "extra",
            "value": "1"
          }
        ]
      },
      "mod_revision": 111,
      "primary_hints": null
    },
    {
      "id": "derivation/example/derivation/2020202020202020/20000000-60000000",
      "labels": {
        "labels": [
          {
            "name": "estuary.dev/key-begin",
            "value": "20000000"
          },
          {
            "name": "estuary.dev/key-end",
            "value": "2fffffff"
          },
          {
            "name": "estuary.dev/rclock-begin",
            "value": "60000000"
          },
          {
            "name": "estuary.dev/rclock-end",
            "value": "9fffffff"
          },
          {
            "name": "extra",
            "value": "1"
          }
        ]
      },
      "mod_revision": 0,
      "primary_hints": null
    }
  ],
  "clock_splits",
  [
    {
      "id": "derivation/example/derivation/2020202020202020/10000000-60000000",
      "labels": {
        "labels": [
          {
            "name": "estuary.dev/key-begin",
            "value": "10000000"
          },
          {
            "name": "estuary.dev/key-end",
            "value": "2fffffff"
          },
          {
            "name": "estuary.dev/rclock-begin",
            "value": "60000000"
          },
          {
            "name": "estuary.dev/rclock-end",
            "value": "7fffffff"
          },
          {
            "name": "extra",
            "value": "1"
          }
        ]
      },
      "mod_revision": 111,
      "primary_hints": null
    },
    {
      "id": "derivation/example/derivation/2020202020202020/10000000-80000000",
      "labels": {
        "labels": [
          {
            "name": "estuary.dev/key-begin",
            "value": "10000000"
          },
          {
            "name": "estuary.dev/key-end",
            "value": "2fffffff"
          },
          {
            "name": "estuary.dev/rclock-begin",
            "value": "80000000"
          },
          {
            "name": "estuary.dev/rclock-end",
            "value": "9fffffff"
          },
          {
            "name": "extra",
            "value": "1"
          }
        ]
      },
      "mod_revision": 0,
      "primary_hints": null
    }
  ],
  "key_changes",
  [
    {
      "Shard": {
        "expectModRevision": "111",
        "upsert": {
          "hintBackups": 2,
          "hintPrefix": "/estuary/flow/hints",
          "hotStandbys": 3,
          "id": "derivation/example/derivation/2020202020202020/10000000-60000000",
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "estuary.dev/build",
                "value": "0101010101010101"
              },
              {
                "name": "estuary.dev/key-begin",
                "value": "10000000"
              },
              {
                "name": "estuary.dev/key-end",
                "value": "1fffffff"
              },
              {
                "name": "estuary.dev/log-level",
                "value": "info"
              },
              {
                "name": "estuary.dev/logs-journal",
                "value": "ops/tasks/BASE_NAME/logs/2020202020202020/kind=derivation/name=example%2Fderivation/pivot=00"
              },
              {
                "name": "estuary.dev/rclock-begin",
                "value": "60000000"
              },
              {
                "name": "estuary.dev/rclock-end",
                "value": "9fffffff"
              },
              {
                "name": "estuary.dev/stats-journal",
                "value": "ops/tasks/BASE_NAME/stats/2020202020202020/kind=derivation/name=example%2Fderivation/pivot=00"
              },
              {
                "name": "estuary.dev/task-name",
                "value": "example/derivation"
              },
              {
                "name": "estuary.dev/task-type",
                "value": "derivation"
              }
            ]
          },
          "maxTxnDuration": "60s",
          "minTxnDuration": "0s",
          "readChannelSize": 4096,
          "recoveryLogPrefix": "recovery",
          "ringBufferSize": 65536
        }
      }
    },
    {
      "Journal": {
        "expectModRevision": "111",
        "upsert": {
          "flags": 4,
          "fragment": {
            "compressionCodec": "SNAPPY",
            "flushInterval": "172800s",
            "length": "268435456",
            "refreshInterval": "300s",
            "stores": [
              "gs://example-bucket/"
            ]
          },
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "content-type",
                "value": "application/x-gazette-recoverylog"
              },
              {
                "name": "estuary.dev/build",
                "value": "0101010101010101"
              },
              {
                "name": "estuary.dev/task-name",
                "value": "example/derivation"
              },
              {
                "name": "estuary.dev/task-type",
                "value": "derivation"
              }
            ]
          },
          "maxAppendRate": "4194304",
          "name": "recovery/derivation/example/derivation/2020202020202020/10000000-60000000",
          "replication": 3,
          "suspend": {
            "offset": "445566"
          }
        }
      }
    },
    {
      "Shard": {
        "upsert": {
          "hintBackups": 2,
          "hintPrefix": "/estuary/flow/hints",
          "hotStandbys": 3,
          "id": "derivation/example/derivation/2020202020202020/20000000-60000000",
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "estuary.dev/build",
                "value": "0101010101010101"
              },
              {
                "name": "estuary.dev/key-begin",
                "value": "20000000"
              },
              {
                "name": "estuary.dev/key-end",
                "value": "2fffffff"
              },
              {
                "name": "estuary.dev/log-level",
                "value": "info"
              },
              {
                "name": "estuary.dev/logs-journal",
                "value": "ops/tasks/BASE_NAME/logs/2020202020202020/kind=derivation/name=example%2Fderivation/pivot=00"
              },
              {
                "name": "estuary.dev/rclock-begin",
                "value": "60000000"
              },
              {
                "name": "estuary.dev/rclock-end",
                "value": "9fffffff"
              },
              {
                "name": "estuary.dev/stats-journal",
                "value": "ops/tasks/BASE_NAME/stats/2020202020202020/kind=derivation/name=example%2Fderivation/pivot=00"
              },
              {
                "name": "estuary.dev/task-name",
                "value": "example/derivation"
              },
              {
                "name": "estuary.dev/task-type",
                "value": "derivation"
              }
            ]
          },
          "maxTxnDuration": "60s",
          "minTxnDuration": "0s",
          "readChannelSize": 4096,
          "recoveryLogPrefix": "recovery",
          "ringBufferSize": 65536
        }
      }
    },
    {
      "Journal": {
        "upsert": {
          "flags": 4,
          "fragment": {
            "compressionCodec": "SNAPPY",
            "flushInterval": "172800s",
            "length": "268435456",
            "refreshInterval": "300s",
            "stores": [
              "gs://example-bucket/"
            ]
          },
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "content-type",
                "value": "application/x-gazette-recoverylog"
              },
              {
                "name": "estuary.dev/build",
                "value": "0101010101010101"
              },
              {
                "name": "estuary.dev/task-name",
                "value": "example/derivation"
              },
              {
                "name": "estuary.dev/task-type",
                "value": "derivation"
              }
            ]
          },
          "maxAppendRate": "4194304",
          "name": "recovery/derivation/example/derivation/2020202020202020/20000000-60000000",
          "replication": 3
        }
      }
    }
  ],
  "clock_changes",
  [
    {
      "Shard": {
        "expectModRevision": "111",
        "upsert": {
          "hintBackups": 2,
          "hintPrefix": "/estuary/flow/hints",
          "hotStandbys": 3,
          "id": "derivation/example/derivation/2020202020202020/10000000-60000000",
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "estuary.dev/build",
                "value": "0101010101010101"
              },
              {
                "name": "estuary.dev/key-begin",
                "value": "10000000"
              },
              {
                "name": "estuary.dev/key-end",
                "value": "2fffffff"
              },
              {
                "name": "estuary.dev/log-level",
                "value": "info"
              },
              {
                "name": "estuary.dev/logs-journal",
                "value": "ops/tasks/BASE_NAME/logs/2020202020202020/kind=derivation/name=example%2Fderivation/pivot=00"
              },
              {
                "name": "estuary.dev/rclock-begin",
                "value": "60000000"
              },
              {
                "name": "estuary.dev/rclock-end",
                "value": "7fffffff"
              },
              {
                "name": "estuary.dev/stats-journal",
                "value": "ops/tasks/BASE_NAME/stats/2020202020202020/kind=derivation/name=example%2Fderivation/pivot=00"
              },
              {
                "name": "estuary.dev/task-name",
                "value": "example/derivation"
              },
              {
                "name": "estuary.dev/task-type",
                "value": "derivation"
              }
            ]
          },
          "maxTxnDuration": "60s",
          "minTxnDuration": "0s",
          "readChannelSize": 4096,
          "recoveryLogPrefix": "recovery",
          "ringBufferSize": 65536
        }
      }
    },
    {
      "Journal": {
        "expectModRevision": "111",
        "upsert": {
          "flags": 4,
          "fragment": {
            "compressionCodec": "SNAPPY",
            "flushInterval": "172800s",
            "length": "268435456",
            "refreshInterval": "300s",
            "stores": [
              "gs://example-bucket/"
            ]
          },
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "content-type",
                "value": "application/x-gazette-recoverylog"
              },
              {
                "name": "estuary.dev/build",
                "value": "0101010101010101"
              },
              {
                "name": "estuary.dev/task-name",
                "value": "example/derivation"
              },
              {
                "name": "estuary.dev/task-type",
                "value": "derivation"
              }
            ]
          },
          "maxAppendRate": "4194304",
          "name": "recovery/derivation/example/derivation/2020202020202020/10000000-60000000",
          "replication": 3,
          "suspend": {
            "offset": "445566"
          }
        }
      }
    },
    {
      "Shard": {
        "upsert": {
          "hintBackups": 2,
          "hintPrefix": "/estuary/flow/hints",
          "hotStandbys": 3,
          "id": "derivation/example/derivation/2020202020202020/10000000-80000000",
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "estuary.dev/build",
                "value": "0101010101010101"
              },
              {
                "name": "estuary.dev/key-begin",
                "value": "10000000"
              },
              {
                "name": "estuary.dev/key-end",
                "value": "2fffffff"
              },
              {
                "name": "estuary.dev/log-level",
                "value": "info"
              },
              {
                "name": "estuary.dev/logs-journal",
                "value": "ops/tasks/BASE_NAME/logs/2020202020202020/kind=derivation/name=example%2Fderivation/pivot=00"
              },
              {
                "name": "estuary.dev/rclock-begin",
                "value": "80000000"
              },
              {
                "name": "estuary.dev/rclock-end",
                "value": "9fffffff"
              },
              {
                "name": "estuary.dev/stats-journal",
                "value": "ops/tasks/BASE_NAME/stats/2020202020202020/kind=derivation/name=example%2Fderivation/pivot=00"
              },
              {
                "name": "estuary.dev/task-name",
                "value": "example/derivation"
              },
              {
                "name": "estuary.dev/task-type",
                "value": "derivation"
              }
            ]
          },
          "maxTxnDuration": "60s",
          "minTxnDuration": "0s",
          "readChannelSize": 4096,
          "recoveryLogPrefix": "recovery",
          "ringBufferSize": 65536
        }
      }
    },
    {
      "Journal": {
        "upsert": {
          "flags": 4,
          "fragment": {
            "compressionCodec": "SNAPPY",
            "flushInterval": "172800s",
            "length": "268435456",
            "refreshInterval": "300s",
            "stores": [
              "gs://example-bucket/"
            ]
          },
          "labels": {
            "labels": [
              {
                "name": "app.gazette.dev/managed-by",
                "value": "estuary.dev/flow"
              },
              {
                "name": "content-type",
                "value": "application/x-gazette-recoverylog"
              },
              {
                "name": "estuary.dev/build",
                "value": "0101010101010101"
              },
              {
                "name": "estuary.dev/task-name",
                "value": "example/derivation"
              },
              {
                "name": "estuary.dev/task-type",
                "value": "derivation"
              }
            ]
          },
          "maxAppendRate": "4194304",
          "name": "recovery/derivation/example/derivation/2020202020202020/10000000-80000000",
          "replication": 3
        }
      }
    }
  ]
]
