crates/activate/src/snapshots/activate__test__update-v2-stateless.snap
---
source: crates/activate/src/lib.rs
expression: changes
---
[
  {
    "Shard": {
      "expectModRevision": "222",
      "upsert": {
        "id": "derivation/example/derivation/2020202020202020/00000000-00000000",
        "recoveryLogPrefix": "recovery",
        "hintPrefix": "/estuary/flow/hints",
        "hintBackups": 2,
        "maxTxnDuration": "60s",
        "minTxnDuration": "0s",
        "hotStandbys": 3,
        "labels": {
          "labels": [
            {
              "name": "app.gazette.dev/managed-by",
              "value": "estuary.dev/flow"
            },
            {
              "name": "estuary.dev/build",
              "value": "0101010101010101"
            },
            {
              "name": "estuary.dev/flag/enable-runtime-v2",
              "value": "true"
            },
            {
              "name": "estuary.dev/key-begin",
              "value": "00000000"
            },
            {
              "name": "estuary.dev/key-end",
              "value": "7fffffff"
            },
            {
              "name": "estuary.dev/log-level",
              "value": "info"
            },
            {
              "name": "estuary.dev/logs-journal",
              "value": "ops/tasks/BASE_NAME/logs/2020202020202020/kind=derivation/name=example%2Fderivation/pivot=00"
            },
            {
              "name": "estuary.dev/rclock-begin",
              "value": "00000000"
            },
            {
              "name": "estuary.dev/rclock-end",
              "value": "ffffffff"
            },
            {
              "name": "estuary.dev/stats-journal",
              "value": "ops/tasks/BASE_NAME/stats/2020202020202020/kind=derivation/name=example%2Fderivation/pivot=00"
            },
            {
              "name": "estuary.dev/task-name",
              "value": "example/derivation"
            },
            {
              "name": "estuary.dev/task-type",
              "value": "derivation"
            }
          ]
        },
        "ringBufferSize": 65536,
        "readChannelSize": 4096
      }
    }
  },
  {
    "Journal": {
      "expectModRevision": "333",
      "upsert": {
        "name": "recovery/derivation/example/derivation/2020202020202020/00000000-00000000",
        "replication": 3,
        "labels": {
          "labels": [
            {
              "name": "app.gazette.dev/managed-by",
              "value": "estuary.dev/flow"
            },
            {
              "name": "content-type",
              "value": "application/x-gazette-recoverylog"
            },
            {
              "name": "estuary.dev/build",
              "value": "0101010101010101"
            },
            {
              "name": "estuary.dev/task-name",
              "value": "example/derivation"
            },
            {
              "name": "estuary.dev/task-type",
              "value": "derivation"
            }
          ]
        },
        "fragment": {
          "length": "268435456",
          "compressionCodec": "SNAPPY",
          "stores": [
            "gs://example-bucket/"
          ],
          "refreshInterval": "300s",
          "flushInterval": "172800s"
        },
        "flags": 4,
        "maxAppendRate": "4194304"
      }
    }
  },
  {
    "Shard": {
      "expectModRevision": "222",
      "upsert": {
        "id": "derivation/example/derivation/2020202020202020/80000000-00000000",
        "maxTxnDuration": "60s",
        "minTxnDuration": "0s",
        "labels": {
          "labels": [
            {
              "name": "app.gazette.dev/managed-by",
              "value": "estuary.dev/flow"
            },
            {
              "name": "estuary.dev/build",
              "value": "0101010101010101"
            },
            {
              "name": "estuary.dev/flag/enable-runtime-v2",
              "value": "true"
            },
            {
              "name": "estuary.dev/key-begin",
              "value": "80000000"
            },
            {
              "name": "estuary.dev/key-end",
              "value": "ffffffff"
            },
            {
              "name": "estuary.dev/log-level",
              "value": "info"
            },
            {
              "name": "estuary.dev/logs-journal",
              "value": "ops/tasks/BASE_NAME/logs/2020202020202020/kind=derivation/name=example%2Fderivation/pivot=00"
            },
            {
              "name": "estuary.dev/rclock-begin",
              "value": "00000000"
            },
            {
              "name": "estuary.dev/rclock-end",
              "value": "ffffffff"
            },
            {
              "name": "estuary.dev/stats-journal",
              "value": "ops/tasks/BASE_NAME/stats/2020202020202020/kind=derivation/name=example%2Fderivation/pivot=00"
            },
            {
              "name": "estuary.dev/task-name",
              "value": "example/derivation"
            },
            {
              "name": "estuary.dev/task-type",
              "value": "derivation"
            }
          ]
        },
        "ringBufferSize": 65536,
        "readChannelSize": 4096
      }
    }
  }
]
